Changelog for Collections.

- Add excludeResources option to getSelections snippet
- Prevent Collection's view reset after quick resource update
- Use lexicons for the Open button
- Add overflow ellipse to the main-column
- Add area to system settings

Collections 3.4.2
===================
- Fix saving tv values from update from grid
- Fix after save event fired on update from grid

Collections 3.4.1
===================
- Fix Safari endless reloading
- Fix Selections when sorting by menuindex

Collections 3.4.0
===================
- Pass column name to snippet renderer
- Prevent permanent sort breaking D&D sort
- Add Collections.renderer.buttons renderer
- Allow snippet renderer on non-existing column
- Add event names to update from grid processor
- Show folders under collections
- Show breadcrumbs when browsing folders under collections
- Import / Export collection views
- Add quick update for collection & selection children
- Prevent saving columns with snippet renderer from grid
- Add new system settings to show create collection/selection button in tree tool bar
- Display resource id in link resource window
- Adjust colors in collections grid

Collections 3.3.0
===================
- Show assigned templates in Collection's view grid
- Fix ignore parents for pdoResources
- Add "Condition for Link resource window" as a setting for Sellection view
- Fix displaying ContentBlocks when content is in separate tab
- Fix checking for template usage in views

Collections 3.2.2
===================
- Fix D&D sort for Collection's view columns
- Added Collections.renderer.pagetitleWithIcons
- Improved handler for inline action buttons allowing icons
- Fix D&D sort when menuindex is set as default sort field
- Rename String sort type

Collections 3.2.1
===================
- Fix update from previous versions

Collections 3.2.0
===================
- Add sort type as a new Collection's template column setting
- Add permanent sort